--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    </head>
 
 <body>
-    <script src="sketchAAAAA.js"></script>
-    
+    <script src="sketch.js"></script>
+    <script src="gestor.js"></script>
 </body>
 </html>
